--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,16 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<category android:name="android.intent.category.BROWSABLE" />-->
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-                <!--<data-->
-                    <!--android:host="localhost:8000/callback"-->
-                    <!--android:scheme="http" />-->
-            <!--</intent-filter>-->
+                <data
+                    android:host="callback"
+                    android:scheme="googlecom" />
+            </intent-filter>
         </activity>
         <activity android:name=".activity.AllYear"></activity>
     </application>
